# ChangeLog for net-analyzer/tcpdump
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/tcpdump/ChangeLog,v 1.167 2013/06/02 14:46:20 jer Exp $

*tcpdump-4.4.0-r1 (02 Jun 2013)

  02 Jun 2013; Jeroen Roovers <jer@gentoo.org> +tcpdump-4.4.0-r1.ebuild:
  Enable secret libcap-ng support for chrooting (maybe bug #334329).

  29 May 2013; Jeroen Roovers <jer@gentoo.org> tcpdump-4.4.0.ebuild:
  Remove obsolete cross-compile fix.

  09 May 2013; Jeroen Roovers <jer@gentoo.org>
  -files/tcpdump-4.0.0-ipv6-build.patch,
  -files/tcpdump-4.0.0-libsmi-autodep.patch, -files/tcpdump-4.2.0-ipv6.patch,
  -files/tcpdump-4.2.0-ppi.h, -tcpdump-3.9.8-r1.ebuild, -tcpdump-3.9.8.ebuild,
  -tcpdump-4.1.1.ebuild, -tcpdump-4.2.0.ebuild, -tcpdump-4.2.1.ebuild:
  Old.

*tcpdump-4.4.0 (09 May 2013)

  09 May 2013; Jeroen Roovers <jer@gentoo.org> +tcpdump-4.4.0.ebuild:
  Version bump.

  21 Feb 2013; Zac Medico <zmedico@gentoo.org> tcpdump-4.3.0.ebuild:
  Add ~arm-linux keyword.

  22 Jan 2013; Mike Frysinger <vapier@gentoo.org>
  +files/tcpdump-4.3.0-ssl-detect.patch, tcpdump-4.3.0.ebuild:
  Fix from upstream for cross-compiling with ssl.

  07 Dec 2012; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Clarify USE=chroot.

  30 Sep 2012; Raúl Porcel <armin76@gentoo.org> tcpdump-4.3.0.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #435658

  23 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> tcpdump-4.3.0.ebuild:
  x86 stable wrt bug #433263

  18 Sep 2012; Jeroen Roovers <jer@gentoo.org> tcpdump-4.3.0.ebuild:
  Stable for HPPA (bug #433263).

  07 Sep 2012; Agostino Sarubbo <ago@gentoo.org> tcpdump-4.3.0.ebuild:
  Stable for amd64, wrt bug #433263

  03 Sep 2012; Anthony G. Basile <blueness@gentoo.org> tcpdump-4.3.0.ebuild:
  Stable ppc64, bug #433263

  03 Sep 2012; Anthony G. Basile <blueness@gentoo.org> tcpdump-4.3.0.ebuild:
  Stable ppc, bug #433263
