@@ -5,14 +5,14 @@ AUX tcpdump-4.3.0-ssl-detect.patch 3568 SHA256 970b709a1599e9496e77dd4cbf7e87ed8
 DIST tcpdump-4.3.0.tar.gz 887619 SHA256 efd08b610210d39977ec3175fa82dad9fbd33587930081be2a905a712dba4286 SHA512 56a33f8aeae551fdc499be31d834207b253de27dce7bdde02e2de5ed0edc4bbe86d8e120c9d2a2303b21d5c32773a4f2984e6af4f0d6f945edb3691a6446cb3c WHIRLPOOL b7d06938816aad8313d61bc30d15efa321ae2ab4663e9355ae2c50b7645bd3cb694de85e04314b5e320459312ee6150a2d3c8c93ee7ffc47ca2ece29bebd8270
 DIST tcpdump-4.4.0.tar.gz 915381 SHA256 12274bed2cb89098dadf00a022b4d40853c5108369f3b3117aedf21ec61530bd SHA512 cf31eb2f878e7e448533172241d57071e105b40265b943ebad8d25867384658016676a528f399fb38b0a2ec09d4986d99e4862fd8a09d9a491eeca75ae69d754 WHIRLPOOL f875510dd8c4f409341790281cc2f2f0be2a6e4642e7a00bd7d62ebd4a263f12e7e5f80a17a219c1fa85edf884ccd870dda259d7f90284d9b356edcb0c137d9b
 EBUILD tcpdump-4.3.0.ebuild 2345 SHA256 c210a21ad6a56c17add0eca2027cdf8cc4c2c58ffb8cb560d79a8e4fe030dacb SHA512 d1ee29b0ccfd7f9014d42499b87e74e7c81841674f64f70d7887a4955605623a8b4897fc0bb721192d718a72d794402bd2b8a080dfa37cd2439a458d8c47a35b WHIRLPOOL c8b276ab9612f74381cd1c5194727d53d691218e51fa998d76e531a9e89ae7f87d3d49b9c048440038c4734a3cdccd0c6d2b7a71de22c7825bd33ead761e5492
-EBUILD tcpdump-4.4.0-r1.ebuild 2380 SHA256 1fafd258a275d65a98d8d633108bfba3512e9887bd24c044631a86c156f7ef5a SHA512 e2b1b0a6d5107ec07c51b1a9d8dfa6d9f6e431f97b844c636df401e0290ce9964268b4652a65ebd743c42f21231dbb54f7e6899b6858ab461becaff2c0f13c4f WHIRLPOOL d30252fc01bc2d66ab404f39b080e76e90bfe0bb2b360c687a81db502f9a4f6087eca5a758d423b2d103a34f886269416cb20d92146e41c58aab0df92a492dc0
+EBUILD tcpdump-4.4.0-r1.ebuild 2255 SHA256 b7c00b777bd01574e7322159248314bf4f3138722e90711c691b02e37dcb2806 SHA512 e62a451e9b5219cc391a193dce88f9e5ecaa76976d340befbdc4b298bd25c562e83bf91421b2e97e56019c294dcf48f03c53dc9ae07e46652b56f35b124cdeeb WHIRLPOOL 85dd9cd7e1ad7c7b9b95f9de5832d3a4ddc17ef44156099d2568e41656bf4b6577b70889f3919be708c0ebf3a35155996be6200fb175ee6da9eb2d2b63d98413
 EBUILD tcpdump-4.4.0.ebuild 2209 SHA256 a2d7e1fc4bcb4a7ed958816949943f975fcf4c8c63f39981331a8d03ea9df8d5 SHA512 fb0a66f91132d6ebbe4fe0f73f349b36d3dccc28aa5f0acae822bea4dba282d7b173fc3a7807cc0eff95ed6e50b3d14f926c9cea224a3939c474bcb76db1502d WHIRLPOOL 85616181baaa9758fce8adc12a20663f466bb14ee2bcd85e93f9d0ecad7a97842d85dcfcb5a9a4790c73667ccb3c38b7cf69ca96f62c7bd031368dd8f9157d55
-MISC ChangeLog 22926 SHA256 974be8b60e9691e41f1aef0684c9e3882b2aa7088a208d7135f396a4a6c12960 SHA512 3a2ffadbadee0c61720be3bc8c1aa7e0d2b551b71efdf83fc5b892a5e9f32a8880803d07ad7fd1b1dcf2e1df1f68980c798825db2ea8f36f8c388da4ceaca6a3 WHIRLPOOL 08a26a98ef8082767e8f6bb9162cd777cd34dc9bdf9b226ac00a1587211ba9227102c7a9885a192d72f3b24ed9596286e2a41c02ab49290178b7b08d875315cd
+MISC ChangeLog 23031 SHA256 ffbc3128ea91cf8c1e5c1ac9aa8f6b63faa2f663664bb0b411cc56f0ccc19e9c SHA512 5ef2d46901a86fa98d22990c55c4b376e26b531869d844ce223b37b0192ac90a9465fd91f82ca56cbebf12f7fadc2c5961d5a42d2838421b84d4d11a37334fd2 WHIRLPOOL ddc5d030490f93ac9b1f5b2bc9fd8c0f69e02df1c06e0c0b3edcdc9c71103eea364e8c9f3d770127c13be382bf8f8319a282ad5b7d9fff955d0fea32809fd767
 MISC metadata.xml 477 SHA256 734dc211640a616efb2a10945f4ea984f9f9ea55863c1b869d95039314336285 SHA512 8b5353591b0f9a4145c5703759cea6ace05bf5d1f70c403bd483fe534f71196c5efaa4c3c160fd314bda9261bc45b2152cea5ae00b8f6635254907121eefc5e8 WHIRLPOOL dece9e0f60ef545dfc27b53f5627ecf6a31578885c87a9e3712e9adc36ae3c886b226c2f7772aa685b3cfe689dd241c49086b4673c034e6f780e15f392b814c6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlGrWr0ACgkQVWmRsqeSphP1ngCfeDdPomBAYgIiE7iVjhgw3vLm
-6QAAoIFyhKIEhXi6vnsYNnDwmN274lep
-=dn3V
+iEYEAREIAAYFAlGrW68ACgkQVWmRsqeSphP35wCfewUcEV3GGHttcYF5kvE0KXGV
+fGYAnR5ScqMdz04nTkUozzbUtiEnCDZ7
+=Kbz/
 -----END PGP SIGNATURE-----
